fixed z-index issue

--- a/src/sass/partials/_nav.scss
+++ b/src/sass/partials/_nav.scss
@@ -4,7 +4,7 @@
   box-shadow: $shadow-bottom;
   position: sticky;
   top: 0;
-  z-index: 100;
+  z-index: 1000;
 
   .navElementsContainer {
     display: flex;
